2011-06-18  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* man/props.Rd: Updated man page for the new volume method

	* R/desc.R (get.volume): Added helper method to get molecular
	volume based on the VABC method.

2011-06-11  Rajarshi Guha  <guhar@nida01768669-lt.nida.nih.gov>

	* man/getfp.Rd: Updated fingerprint man page for the new one

	* R/rcdk.R (get.total.formal.charge): Fixed typo in variable name
	(get.fingerprint): Added support for the new Hybridization fingerprinter

	* man/viewmol2d.Rd: Updated man page for the new clipboard
	copy method

	* R/visual.R (copy.image.to.clipboard): Added function
	to copy 2D depiction to system clipboard

	* Updated to latest stable CDK release

2011-05-06  Rajarshi Guha  <guhar@guest-193-062-206-199.wtgc.org>

	* man/gettotalcharge.Rd: Added man page entry for the total
	formal charge function.

	* R/rcdk.R (get.total.formal.charge): Added new function to 
	return the total formal charge. Also updated get.total.charge
	to recognize when partial charges are unset and in such a case
	return the sum of formal charges

2011-02-20  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* Updated CDK jar file to latest master plus some
	cherry picks from 1.4

	* NAMESPACE: Added a specific export for hasNext

2010-11-08  Rajarshi Guha  <guhar@office>

	* R/rcdk.R (get.exact.mass): Updated to check for exception when
	getting exact mass and print a more useful message.
	(get.natural.mass): Same as above

2010-11-07  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* man/getproperty.Rd: Updated man page for get.title

	* R/rcdk.R (get.title): Added a helper method to get the title
	of a molecule.

	* inst/doc/rcdk.Rnw (section{Input / Output}): Added a description
	of how to use the iterating version of the molecule loader

	* R/iterating.R (nextEl): Updated iterator so that we don't skip 
	the first molecule. Also reorganized the code so that it makes
	more sense
