@@ -4,13 +4,13 @@
 \alias{copy.image.to.clipboard}
 \alias{depict}
 \title{
-  View 2D Structure Diagrams
+  View and Copy 2D Structure Diagrams
 }
 \description{
 The CDK is capable of generating 2D structure diagrams. These methods
 allow one to view 2D structure diagrams. Depending on the method called
 a Swing JFrame is displayed which allows resizing of the image or a
-raster image (derived from a PNG bytestream) is is returned, which can 
+raster image (derived from a PNG byte stream) is is returned, which can 
 be viewed using \code{\link{rasterImage}}. It is also possible to copy
 a 2D depiction to the system clipboard, which can then be pasted into 
 various external applications.
@@ -51,9 +51,19 @@ PNG version of the 2D depiction.
 
   For \code{view.image.2d}, the image can be viewed via \code{\link{rasterImage}}.
 
+  \code{copy.image.to.clipboard} copies the 2D depiction to the system clipboard in 
+  PNG format. You can then paste into other applications.
+
   Due to event handling issues, the depiction will show on OS X, but
-  the window will be unresponsive. The depictions will work fine on
-  Linux and Windows.
+  the window will be unresponsive. Also copying images to the clipboard will not work.
+  As a result, on OS X we make use of a standalone
+  helper that is run via the \code{system} command. Currently, this is supported
+  for the \code{\link{view.molecule.2d}} method (for a single molecule) and the 
+\code{\link{copyy.image.to.clipboard}} method. In the future, other view methods will also 
+be accessible via this mechanism. While this allows OS X users to view molecules, it is
+slow due to invoking a new process.
+
+  The depictions will work fine (i.e., no need to shell out) on Linux and Windows.
   }
 \examples{
 m <- parse.smiles('c1ccccc1C(=O)NC')[[1]]
